--- a/src/style.css
+++ b/src/style.css
@@ -14,13 +14,10 @@
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  text-decoration: none;
+  color: black;
 }
-a:hover {
-  color: #535bf2;
-}
+
 
 body {
   margin: 0;
@@ -56,13 +53,22 @@ button:focus-visible {
   padding: 2em;
 }
 
+.each-tab {
+  border: 1px solid rgb(249, 249, 249);
+  border-radius: 6px;
+  padding: 6px 12px;
+  background: rgb(249, 249, 249);
+  height: 100%;
+}
+.each-tab:hover {
+  border-color: #646cff;
+  background: rgb(243, 243, 243);
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
   }
   button {
     background-color: #f9f9f9;
