add schedule and price info

--- a/src/style.css
+++ b/src/style.css
@@ -64,6 +64,16 @@ button:focus-visible {
   border-color: #646cff;
   background: rgb(243, 243, 243);
 }
+table {
+  width: 100%;
+}
+tr, td, table, th {
+  border: 1px solid gray;
+  border-collapse: collapse;
+}
+td {
+  padding: 3px 6px;
+}
 
 @media (prefers-color-scheme: light) {
   :root {
