--- a/src/style.css
+++ b/src/style.css
@@ -59,6 +59,7 @@ button:focus-visible {
   padding: 6px 12px;
   background: rgb(249, 249, 249);
   height: 100%;
+  cursor: pointer;
 }
 .each-tab:hover {
   border-color: #646cff;
